--- a/main.html
+++ b/main.html
@@ -10,11 +10,12 @@
     <div class="container">
         <h1>Generate a<br><span>Random Password</span></h1>
         <div class="display">
-            <input type="text" id="pass" placeholder="Password">
+            <input type="text" id="passwordd" placeholder="Password">
             <img src="images/copy.png">
         </div>
-        <button><img src="images/generate.png" id="button__img"><h5 id="button__text">Generate</h5></button>  
+        <button onclick="crt()"><img src="images/generate.png" id="button__img"><h4>Generate</h4></button>  
         <h2>By Vizz</h2>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
