--- a/main.html
+++ b/main.html
@@ -9,12 +9,14 @@
 <body>
     <div class="container">
         <h1>Generate a<br><span>Random Password</span></h1>
+        <input type="number" id="lengthh" placeholder="Enter length">
         <div class="display">
+            
             <input type="text" id="passwordd" placeholder="Password">
-            <img src="images/copy.png">
+            <img src="images/copy.png" onclick="copypass()">
         </div>
         <button onclick="crt()"><img src="images/generate.png" id="button__img"><h4>Generate</h4></button>  
-        <h2>By Vizz</h2>
+        <h2>By Vizz &#10084;</h2>
     </div>
     <script src="script.js"></script>
 </body>
